conformance/tests/gateway-listener-mixed-protocol-conflict.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-listener-conflicts
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: gateway-listener-conflicts-http
      port: 80
      protocol: HTTP
      hostname: control.example.com
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: HTTPRoute
    - name: gateway-listener-conflicts-https
      port: 8443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: HTTPRoute
      tls:
        certificateRefs:
          - name: tls-validity-checks-certificate
    - name: gateway-listener-conflicts-tls
      port: 8443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TLSRoute
      tls:
        mode: Passthrough
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mixed-protocol-conflict-http
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-listener-conflicts
      sectionName: gateway-listener-conflicts-http
  hostnames:
    - control.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /control
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mixed-protocol-conflict-https
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-listener-conflicts
      sectionName: gateway-listener-conflicts-https
  hostnames:
    - https.example.org
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /https
      backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: mixed-protocol-conflict-tls
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: gateway-listener-conflicts
      sectionName: gateway-listener-conflicts-tls
  hostnames:
    - abc.example.com
  rules:
    - backendRefs:
        - name: tcp-backend
          port: 8443
